syntax = "proto3";

option go_package = "../pb;pb";
import "common.proto";
// 这里有多个--proto_path是因为当前proto文件中有import别的proto文件，在构建的时候这些proto文件要从--proto_path指定的多个路径去找，
// 一个没找到就回去从另一个招
// protoc --proto_path=../../../user/proto/ --proto_path=. --go_out=. ./*.proto

// 关注关系方法
message FavoriteVideoActionReq {
  int64 user_id = 1;
  int64 video_id = 2;
  int64 action_type = 3;
}

message FavoriteVideoActionRsp {
  CommonResponse common_rsp = 1;
}

message FavoriteCommentActionReq {
  int64 user_id = 1;
  int64 comment_id = 2;
  int64 action_type = 3;
}

message FavoriteCommentActionRsp {
  CommonResponse common_rsp = 1;
}

message GetFavoriteVideoIdListReq {
  int64 user_id = 1;
}

message GetFavoriteVideoIdListRsp {
  repeated int64 video_id_list = 1; // 关注z者用户信息列表
}


// IsFavoriteVideoDict
message FavoriteVideoUnit {
  int64 user_id = 1;
  int64 video_id = 2;
}

message IsFavoriteVideoDictReq {
  repeated FavoriteVideoUnit favorite_unit_list = 1;
}

message IsFavoriteVideoDictRsp {
  map<string, bool> is_favorite_dict = 1;
}

message FavoriteCommentUnit {
  int64 user_id = 1;
  int64 comment_id = 2;
}

message IsFavoriteCommentDictReq {
  repeated FavoriteCommentUnit favorite_unit_list = 1;
}

message IsFavoriteCommentDictRsp {
  map<string, bool> is_favorite_dict = 1;
}


message CommentLikeSumReq{
  int64 video_id=1;
}

message  CommentLikeSumRsq{
  int64 like_nums=1;
}

message VideoLikeSumReq{
  int64 video_id=1;
}

message  VideoLikeSumRsq{
  int64 like_nums=1;
}

// **********************

service FavoriteService {
  rpc FavoriteVideoAction(FavoriteVideoActionReq) returns (FavoriteVideoActionRsp); // 点赞视频方法
  rpc FavoriteCommentAction(FavoriteCommentActionReq) returns (FavoriteCommentActionRsp);//点赞评论方法
  rpc GetFavoriteVideoIdList(GetFavoriteVideoIdListReq) returns (GetFavoriteVideoIdListRsp); // 获取喜欢的视频列表
  rpc IsFavoriteVideoDict(IsFavoriteVideoDictReq) returns (IsFavoriteVideoDictRsp); // 判断是否喜欢视频
  rpc IsFavoriteCommentDict(IsFavoriteCommentDictReq) returns (IsFavoriteCommentDictRsp);//判读是否喜欢评论
  rpc GetCommentLikeSum(CommentLikeSumReq) returns (CommentLikeSumRsq);//获取评论的喜欢数量
  rpc GetVideoLikeSum(VideoLikeSumReq) returns (VideoLikeSumRsq);//获取视频的喜爱数量
}